analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASIGNAR
    BREAK
    CASE
    COMILLA_DOBLE
    COMILLA_DOBLE_CADENA
    COMILLA_SIMPLE
    COMILLA_SIMPLE_CADENA
    CONTINUE
    DICT
    DIV_ASIGNAR
    DO
    DOSPUNTOS
    ENDWHILE
    FOREACH
    GLOBAL
    INDENT
    MAYOR_MENOR
    MENOR_MAYOR
    MODULO
    MULT_ASIGNAR
    POT_ASIGNAR
    PUNTO
    RESTA_ASIGNAR
    SET
    SUMA_ASIGNAR
    SWITCH
    TUPLE
    VARIABLE_OBJETO

Grammar

Rule 0     S' -> sentencia
Rule 1     sentencia -> asignacion
Rule 2     sentencia -> echo
Rule 3     sentencia -> estructuracontrol
Rule 4     sentencia -> comentario
Rule 5     sentencia -> declaracion_numeros
Rule 6     sentencia -> array
Rule 7     sentencia -> funcion
Rule 8     sentencia -> readline
Rule 9     sentencia -> ingreso_datos
Rule 10    sentencia -> objeto
Rule 11    sentencia -> expresionAritmetica
Rule 12    sentencia -> echo SALTO
Rule 13    asignacion -> VAR ASIGNACION valor EOL
Rule 14    echo -> ECHO valores EOL
Rule 15    echo -> ECHO valores EOL SALTO
Rule 16    valores -> valor
Rule 17    valores -> valor COMA valores
Rule 18    valor -> ENTERO
Rule 19    valor -> FLOTANTE
Rule 20    valor -> BOOLEANO
Rule 21    valor -> CADENA
Rule 22    valor -> VAR
Rule 23    valor -> VARIABLE_ARRAY
Rule 24    valor -> operacion
Rule 25    valor -> argumentologico
Rule 26    valor -> array_index
Rule 27    diccionario -> clave_dic ASIGNACION MAYOR valor_dic
Rule 28    diccionario -> clave_dic ASIGNACION MAYOR valor_dic COMA diccionario
Rule 29    clave_dic -> ENTERO
Rule 30    clave_dic -> CADENA
Rule 31    valor_dic -> numero
Rule 32    valor_dic -> CADENA
Rule 33    valor_dic -> VAR
Rule 34    valor_dic -> BOOLEANO
Rule 35    valor_dic -> array_l
Rule 36    array_index -> VAR multi_dimensiones
Rule 37    multi_dimensiones -> LBRACKET clave_dic RBRACKET
Rule 38    multi_dimensiones -> LBRACKET clave_dic RBRACKET multi_dimensiones
Rule 39    operacion -> ENTERO
Rule 40    operacion -> FLOTANTE
Rule 41    operacion -> ENTERO operador operacion
Rule 42    operacion -> FLOTANTE operador operacion
Rule 43    estructuracontrol -> while
Rule 44    estructuracontrol -> if
Rule 45    estructuracontrol -> for
Rule 46    while -> WHILE LPAREN condicion RPAREN LBRACE lineas RBRACE
Rule 47    if -> IF LPAREN condicion RPAREN LBRACE lineas RBRACE
Rule 48    if -> if else
Rule 49    if -> if elseif else
Rule 50    if -> if elseif
Rule 51    elseif -> ELSEIF LPAREN condicion RPAREN LBRACE lineas RBRACE
Rule 52    elseif -> ELSEIF LPAREN condicion RPAREN LBRACE lineas RBRACE elseif
Rule 53    else -> ELSE LBRACE lineas RBRACE
Rule 54    condicion -> argumentologico
Rule 55    condicion -> argumentologico conector_logico condicion
Rule 56    vacio -> EOL
Rule 57    conector_logico -> AND
Rule 58    conector_logico -> OR
Rule 59    valor_logico -> numero
Rule 60    valor_logico -> VAR
Rule 61    argumentologico -> VAR operador_logico VAR
Rule 62    argumentologico -> numero operador_logico numero
Rule 63    argumentologico -> VAR operador_logico numero
Rule 64    argumentologico -> VAR IGUAL BOOLEANO
Rule 65    argumentologico -> VAR IGUAL CADENA
Rule 66    argumentologico -> VAR DIFERENTE BOOLEANO
Rule 67    argumentologico -> VAR DIFERENTE CADENA
Rule 68    argumentologico -> numero operador_logico VAR
Rule 69    argumentologico -> BOOLEANO IGUAL VAR
Rule 70    argumentologico -> CADENA IGUAL VAR
Rule 71    argumentologico -> CADENA IGUAL CADENA
Rule 72    argumentologico -> CADENA DIFERENTE VAR
Rule 73    argumentologico -> CADENA DIFERENTE CADENA
Rule 74    argumentologico -> BOOLEANO
Rule 75    numero -> ENTERO
Rule 76    numero -> FLOTANTE
Rule 77    operador_logico -> IGUAL
Rule 78    operador_logico -> DIFERENTE
Rule 79    operador_logico -> MENOR
Rule 80    operador_logico -> MAYOR
Rule 81    operador_logico -> MENOR_IGUAL
Rule 82    operador_logico -> MAYOR_IGUAL
Rule 83    comentario -> COMNT
Rule 84    operador -> SUMA
Rule 85    operador -> RESTA
Rule 86    operador -> MULT
Rule 87    operador -> DIV
Rule 88    operador -> POT
Rule 89    declaracion_numeros -> VAR ASIGNACION numero EOL
Rule 90    array -> VAR ASIGNACION ARRAY LPAREN elementos RPAREN EOL
Rule 91    elementos -> lista
Rule 92    elementos -> diccionario
Rule 93    lista -> palabras
Rule 94    lista -> numeros
Rule 95    lista -> variables
Rule 96    lista -> array_l
Rule 97    lista -> bool
Rule 98    array_l -> ARRAY LPAREN elementos RPAREN
Rule 99    array_l -> ARRAY LPAREN elementos RPAREN COMA lista
Rule 100   palabras -> CADENA
Rule 101   palabras -> CADENA COMA lista
Rule 102   numeros -> numero
Rule 103   numeros -> numero COMA lista
Rule 104   variables -> VAR
Rule 105   variables -> VAR COMA lista
Rule 106   bool -> BOOLEANO
Rule 107   bool -> BOOLEANO COMA lista
Rule 108   funcion -> FUNCTION tipo_funcion LBRACE final_funcion RBRACE
Rule 109   tipo_funcion -> FUNCION
Rule 110   tipo_funcion -> VARIABLE_FUNCION
Rule 111   final_funcion -> RETURN VAR EOL
Rule 112   final_funcion -> lineas final_funcion
Rule 113   cuerpo_funcion -> declaracion_numeros final_funcion
Rule 114   cuerpo_funcion -> array final_funcion
Rule 115   cuerpo_funcion -> estructuracontrol final_funcion
Rule 116   readline -> READLINE LPAREN CADENA RPAREN EOL
Rule 117   ingreso_datos -> VAR ASIGNACION readline
Rule 118   objeto -> CLASE OBJETO LBRACE mas_objetos RBRACE VAR ASIGNACION NEW OBJETO LPAREN RPAREN EOL mas_atributos
Rule 119   cuerpo_objeto -> PUBLIC VAR EOL
Rule 120   cuerpo_objeto -> PUBLIC asignacion
Rule 121   mas_objetos -> cuerpo_objeto
Rule 122   mas_objetos -> cuerpo_objeto mas_objetos
Rule 123   atributo -> VAR RESTA MAYOR ID ASIGNACION CADENA EOL
Rule 124   mas_atributos -> atributo
Rule 125   mas_atributos -> atributo mas_atributos
Rule 126   for -> FOR LPAREN asignacion argumentologico EOL VAR SUMA SUMA RPAREN LBRACE lineas RBRACE
Rule 127   for -> FOR LPAREN asignacion argumentologico EOL VAR RESTA RESTA RPAREN LBRACE lineas RBRACE
Rule 128   for -> FOR LPAREN asignacion argumentologico EOL VAR SUMA SUMA RPAREN LBRACE SALTO lineas SALTO RBRACE
Rule 129   linea -> echo
Rule 130   linea -> ECHO CADENA EOL
Rule 131   linea -> ECHO VAR EOL
Rule 132   linea -> VAR ASIGNACION CADENA EOL
Rule 133   linea -> estructuracontrol
Rule 134   linea -> comentario
Rule 135   linea -> declaracion_numeros
Rule 136   linea -> array
Rule 137   lineas -> linea
Rule 138   lineas -> linea lineas
Rule 139   expresionAritmetica -> VAR ASIGNACION numero masTerminos EOL
Rule 140   expresionAritmetica -> VAR ASIGNACION VAR masTerminos EOL
Rule 141   termino -> operador numero
Rule 142   termino -> operador VAR
Rule 143   masTerminos -> termino
Rule 144   masTerminos -> termino masTerminos

Terminals, with rules where they appear

AND                  : 57
ARRAY                : 90 98 99
ASIGNACION           : 13 27 28 89 90 117 118 123 132 139 140
ASIGNAR              : 
BOOLEANO             : 20 34 64 66 69 74 106 107
BREAK                : 
CADENA               : 21 30 32 65 67 70 71 71 72 73 73 100 101 116 123 130 132
CASE                 : 
CLASE                : 118
COMA                 : 17 28 99 101 103 105 107
COMILLA_DOBLE        : 
COMILLA_DOBLE_CADENA : 
COMILLA_SIMPLE       : 
COMILLA_SIMPLE_CADENA : 
COMNT                : 83
CONTINUE             : 
DICT                 : 
DIFERENTE            : 66 67 72 73 78
DIV                  : 87
DIV_ASIGNAR          : 
DO                   : 
DOSPUNTOS            : 
ECHO                 : 14 15 130 131
ELSE                 : 53
ELSEIF               : 51 52
ENDWHILE             : 
ENTERO               : 18 29 39 41 75
EOL                  : 13 14 15 56 89 90 111 116 118 119 123 126 127 128 130 131 132 139 140
FLOTANTE             : 19 40 42 76
FOR                  : 126 127 128
FOREACH              : 
FUNCION              : 109
FUNCTION             : 108
GLOBAL               : 
ID                   : 123
IF                   : 47
IGUAL                : 64 65 69 70 71 77
INDENT               : 
LBRACE               : 46 47 51 52 53 108 118 126 127 128
LBRACKET             : 37 38
LPAREN               : 46 47 51 52 90 98 99 116 118 126 127 128
MAYOR                : 27 28 80 123
MAYOR_IGUAL          : 82
MAYOR_MENOR          : 
MENOR                : 79
MENOR_IGUAL          : 81
MENOR_MAYOR          : 
MODULO               : 
MULT                 : 86
MULT_ASIGNAR         : 
NEW                  : 118
OBJETO               : 118 118
OR                   : 58
POT                  : 88
POT_ASIGNAR          : 
PUBLIC               : 119 120
PUNTO                : 
RBRACE               : 46 47 51 52 53 108 118 126 127 128
RBRACKET             : 37 38
READLINE             : 116
RESTA                : 85 123 127 127
RESTA_ASIGNAR        : 
RETURN               : 111
RPAREN               : 46 47 51 52 90 98 99 116 118 126 127 128
SALTO                : 12 15 128 128
SET                  : 
SUMA                 : 84 126 126 128 128
SUMA_ASIGNAR         : 
SWITCH               : 
TUPLE                : 
VAR                  : 13 22 33 36 60 61 61 63 64 65 66 67 68 69 70 72 89 90 104 105 111 117 118 119 123 126 127 128 131 132 139 140 140 142
VARIABLE_ARRAY       : 23
VARIABLE_FUNCION     : 110
VARIABLE_OBJETO      : 
WHILE                : 46
error                : 

Nonterminals, with rules where they appear

argumentologico      : 25 54 55 126 127 128
array                : 6 114 136
array_index          : 26
array_l              : 35 96
asignacion           : 1 120 126 127 128
atributo             : 124 125
bool                 : 97
clave_dic            : 27 28 37 38
comentario           : 4 134
condicion            : 46 47 51 52 55
conector_logico      : 55
cuerpo_funcion       : 
cuerpo_objeto        : 121 122
declaracion_numeros  : 5 113 135
diccionario          : 28 92
echo                 : 2 12 129
elementos            : 90 98 99
else                 : 48 49
elseif               : 49 50 52
estructuracontrol    : 3 115 133
expresionAritmetica  : 11
final_funcion        : 108 112 113 114 115
for                  : 45
funcion              : 7
if                   : 44 48 49 50
ingreso_datos        : 9
linea                : 137 138
lineas               : 46 47 51 52 53 112 126 127 128 138
lista                : 91 99 101 103 105 107
masTerminos          : 139 140 144
mas_atributos        : 118 125
mas_objetos          : 118 122
multi_dimensiones    : 36 38
numero               : 31 59 62 62 63 68 89 102 103 139 141
numeros              : 94
objeto               : 10
operacion            : 24 41 42
operador             : 41 42 141 142
operador_logico      : 61 62 63 68
palabras             : 93
readline             : 8 117
sentencia            : 0
termino              : 143 144
tipo_funcion         : 108
vacio                : 
valor                : 13 16 17
valor_dic            : 27 28
valor_logico         : 
valores              : 14 15 17
variables            : 95
while                : 43

Parsing method: LALR

state 0

    (0) S' -> . sentencia
    (1) sentencia -> . asignacion
    (2) sentencia -> . echo
    (3) sentencia -> . estructuracontrol
    (4) sentencia -> . comentario
    (5) sentencia -> . declaracion_numeros
    (6) sentencia -> . array
    (7) sentencia -> . funcion
    (8) sentencia -> . readline
    (9) sentencia -> . ingreso_datos
    (10) sentencia -> . objeto
    (11) sentencia -> . expresionAritmetica
    (12) sentencia -> . echo SALTO
    (13) asignacion -> . VAR ASIGNACION valor EOL
    (14) echo -> . ECHO valores EOL
    (15) echo -> . ECHO valores EOL SALTO
    (43) estructuracontrol -> . while
    (44) estructuracontrol -> . if
    (45) estructuracontrol -> . for
    (83) comentario -> . COMNT
    (89) declaracion_numeros -> . VAR ASIGNACION numero EOL
    (90) array -> . VAR ASIGNACION ARRAY LPAREN elementos RPAREN EOL
    (108) funcion -> . FUNCTION tipo_funcion LBRACE final_funcion RBRACE
    (116) readline -> . READLINE LPAREN CADENA RPAREN EOL
    (117) ingreso_datos -> . VAR ASIGNACION readline
    (118) objeto -> . CLASE OBJETO LBRACE mas_objetos RBRACE VAR ASIGNACION NEW OBJETO LPAREN RPAREN EOL mas_atributos
    (139) expresionAritmetica -> . VAR ASIGNACION numero masTerminos EOL
    (140) expresionAritmetica -> . VAR ASIGNACION VAR masTerminos EOL
    (46) while -> . WHILE LPAREN condicion RPAREN LBRACE lineas RBRACE
    (47) if -> . IF LPAREN condicion RPAREN LBRACE lineas RBRACE
    (48) if -> . if else
    (49) if -> . if elseif else
    (50) if -> . if elseif
    (126) for -> . FOR LPAREN asignacion argumentologico EOL VAR SUMA SUMA RPAREN LBRACE lineas RBRACE
    (127) for -> . FOR LPAREN asignacion argumentologico EOL VAR RESTA RESTA RPAREN LBRACE lineas RBRACE
    (128) for -> . FOR LPAREN asignacion argumentologico EOL VAR SUMA SUMA RPAREN LBRACE SALTO lineas SALTO RBRACE

    VAR             shift and go to state 13
    ECHO            shift and go to state 14
    COMNT           shift and go to state 18
    FUNCTION        shift and go to state 19
    READLINE        shift and go to state 20
    CLASE           shift and go to state 21
    WHILE           shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24

    sentencia                      shift and go to state 1
    asignacion                     shift and go to state 2
    echo                           shift and go to state 3
    estructuracontrol              shift and go to state 4
    comentario                     shift and go to state 5
    declaracion_numeros            shift and go to state 6
    array                          shift and go to state 7
    funcion                        shift and go to state 8
    readline                       shift and go to state 9
    ingreso_datos                  shift and go to state 10
    objeto                         shift and go to state 11
    expresionAritmetica            shift and go to state 12
    while                          shift and go to state 15
    if                             shift and go to state 16
    for                            shift and go to state 17

state 1

    (0) S' -> sentencia .



state 2

    (1) sentencia -> asignacion .

    $end            reduce using rule 1 (sentencia -> asignacion .)


state 3

    (2) sentencia -> echo .
    (12) sentencia -> echo . SALTO

    $end            reduce using rule 2 (sentencia -> echo .)
    SALTO           shift and go to state 25


state 4

    (3) sentencia -> estructuracontrol .

    $end            reduce using rule 3 (sentencia -> estructuracontrol .)


state 5

    (4) sentencia -> comentario .

    $end            reduce using rule 4 (sentencia -> comentario .)


state 6

    (5) sentencia -> declaracion_numeros .

    $end            reduce using rule 5 (sentencia -> declaracion_numeros .)


state 7

    (6) sentencia -> array .

    $end            reduce using rule 6 (sentencia -> array .)


state 8

    (7) sentencia -> funcion .

    $end            reduce using rule 7 (sentencia -> funcion .)


state 9

    (8) sentencia -> readline .

    $end            reduce using rule 8 (sentencia -> readline .)


state 10

    (9) sentencia -> ingreso_datos .

    $end            reduce using rule 9 (sentencia -> ingreso_datos .)


state 11

    (10) sentencia -> objeto .

    $end            reduce using rule 10 (sentencia -> objeto .)


state 12

    (11) sentencia -> expresionAritmetica .

    $end            reduce using rule 11 (sentencia -> expresionAritmetica .)


state 13

    (13) asignacion -> VAR . ASIGNACION valor EOL
    (89) declaracion_numeros -> VAR . ASIGNACION numero EOL
    (90) array -> VAR . ASIGNACION ARRAY LPAREN elementos RPAREN EOL
    (117) ingreso_datos -> VAR . ASIGNACION readline
    (139) expresionAritmetica -> VAR . ASIGNACION numero masTerminos EOL
    (140) expresionAritmetica -> VAR . ASIGNACION VAR masTerminos EOL

    ASIGNACION      shift and go to state 26


state 14

    (14) echo -> ECHO . valores EOL
    (15) echo -> ECHO . valores EOL SALTO
    (16) valores -> . valor
    (17) valores -> . valor COMA valores
    (18) valor -> . ENTERO
    (19) valor -> . FLOTANTE
    (20) valor -> . BOOLEANO
    (21) valor -> . CADENA
    (22) valor -> . VAR
    (23) valor -> . VARIABLE_ARRAY
    (24) valor -> . operacion
    (25) valor -> . argumentologico
    (26) valor -> . array_index
    (39) operacion -> . ENTERO
    (40) operacion -> . FLOTANTE
    (41) operacion -> . ENTERO operador operacion
    (42) operacion -> . FLOTANTE operador operacion
    (61) argumentologico -> . VAR operador_logico VAR
    (62) argumentologico -> . numero operador_logico numero
    (63) argumentologico -> . VAR operador_logico numero
    (64) argumentologico -> . VAR IGUAL BOOLEANO
    (65) argumentologico -> . VAR IGUAL CADENA
    (66) argumentologico -> . VAR DIFERENTE BOOLEANO
    (67) argumentologico -> . VAR DIFERENTE CADENA
    (68) argumentologico -> . numero operador_logico VAR
    (69) argumentologico -> . BOOLEANO IGUAL VAR
    (70) argumentologico -> . CADENA IGUAL VAR
    (71) argumentologico -> . CADENA IGUAL CADENA
    (72) argumentologico -> . CADENA DIFERENTE VAR
    (73) argumentologico -> . CADENA DIFERENTE CADENA
    (74) argumentologico -> . BOOLEANO
    (36) array_index -> . VAR multi_dimensiones
    (75) numero -> . ENTERO
    (76) numero -> . FLOTANTE

    ENTERO          shift and go to state 29
    FLOTANTE        shift and go to state 30
    BOOLEANO        shift and go to state 31
    CADENA          shift and go to state 32
    VAR             shift and go to state 33
    VARIABLE_ARRAY  shift and go to state 34

    valores                        shift and go to state 27
    valor                          shift and go to state 28
    operacion                      shift and go to state 35
    argumentologico                shift and go to state 36
    array_index                    shift and go to state 37
    numero                         shift and go to state 38

state 15

    (43) estructuracontrol -> while .

    $end            reduce using rule 43 (estructuracontrol -> while .)
    ECHO            reduce using rule 43 (estructuracontrol -> while .)
    VAR             reduce using rule 43 (estructuracontrol -> while .)
    COMNT           reduce using rule 43 (estructuracontrol -> while .)
    WHILE           reduce using rule 43 (estructuracontrol -> while .)
    IF              reduce using rule 43 (estructuracontrol -> while .)
    FOR             reduce using rule 43 (estructuracontrol -> while .)
    RBRACE          reduce using rule 43 (estructuracontrol -> while .)
    RETURN          reduce using rule 43 (estructuracontrol -> while .)
    SALTO           reduce using rule 43 (estructuracontrol -> while .)


state 16

    (44) estructuracontrol -> if .
    (48) if -> if . else
    (49) if -> if . elseif else
    (50) if -> if . elseif
    (53) else -> . ELSE LBRACE lineas RBRACE
    (51) elseif -> . ELSEIF LPAREN condicion RPAREN LBRACE lineas RBRACE
    (52) elseif -> . ELSEIF LPAREN condicion RPAREN LBRACE lineas RBRACE elseif

    $end            reduce using rule 44 (estructuracontrol -> if .)
    ECHO            reduce using rule 44 (estructuracontrol -> if .)
    VAR             reduce using rule 44 (estructuracontrol -> if .)
    COMNT           reduce using rule 44 (estructuracontrol -> if .)
    WHILE           reduce using rule 44 (estructuracontrol -> if .)
    IF              reduce using rule 44 (estructuracontrol -> if .)
    FOR             reduce using rule 44 (estructuracontrol -> if .)
    RBRACE          reduce using rule 44 (estructuracontrol -> if .)
    RETURN          reduce using rule 44 (estructuracontrol -> if .)
    SALTO           reduce using rule 44 (estructuracontrol -> if .)
    ELSE            shift and go to state 41
    ELSEIF          shift and go to state 42

    else                           shift and go to state 39
    elseif                         shift and go to state 40

state 17

    (45) estructuracontrol -> for .

    $end            reduce using rule 45 (estructuracontrol -> for .)
    ECHO            reduce using rule 45 (estructuracontrol -> for .)
    VAR             reduce using rule 45 (estructuracontrol -> for .)
    COMNT           reduce using rule 45 (estructuracontrol -> for .)
    WHILE           reduce using rule 45 (estructuracontrol -> for .)
    IF              reduce using rule 45 (estructuracontrol -> for .)
    FOR             reduce using rule 45 (estructuracontrol -> for .)
    RBRACE          reduce using rule 45 (estructuracontrol -> for .)
    RETURN          reduce using rule 45 (estructuracontrol -> for .)
    SALTO           reduce using rule 45 (estructuracontrol -> for .)


state 18

    (83) comentario -> COMNT .

    $end            reduce using rule 83 (comentario -> COMNT .)
    ECHO            reduce using rule 83 (comentario -> COMNT .)
    VAR             reduce using rule 83 (comentario -> COMNT .)
    COMNT           reduce using rule 83 (comentario -> COMNT .)
    WHILE           reduce using rule 83 (comentario -> COMNT .)
    IF              reduce using rule 83 (comentario -> COMNT .)
    FOR             reduce using rule 83 (comentario -> COMNT .)
    RBRACE          reduce using rule 83 (comentario -> COMNT .)
    RETURN          reduce using rule 83 (comentario -> COMNT .)
    SALTO           reduce using rule 83 (comentario -> COMNT .)


state 19

    (108) funcion -> FUNCTION . tipo_funcion LBRACE final_funcion RBRACE
    (109) tipo_funcion -> . FUNCION
    (110) tipo_funcion -> . VARIABLE_FUNCION

    FUNCION         shift and go to state 44
    VARIABLE_FUNCION shift and go to state 45

    tipo_funcion                   shift and go to state 43

state 20

    (116) readline -> READLINE . LPAREN CADENA RPAREN EOL

    LPAREN          shift and go to state 46


state 21

    (118) objeto -> CLASE . OBJETO LBRACE mas_objetos RBRACE VAR ASIGNACION NEW OBJETO LPAREN RPAREN EOL mas_atributos

    OBJETO          shift and go to state 47


state 22

    (46) while -> WHILE . LPAREN condicion RPAREN LBRACE lineas RBRACE

    LPAREN          shift and go to state 48


state 23

    (47) if -> IF . LPAREN condicion RPAREN LBRACE lineas RBRACE

    LPAREN          shift and go to state 49


state 24

    (126) for -> FOR . LPAREN asignacion argumentologico EOL VAR SUMA SUMA RPAREN LBRACE lineas RBRACE
    (127) for -> FOR . LPAREN asignacion argumentologico EOL VAR RESTA RESTA RPAREN LBRACE lineas RBRACE
    (128) for -> FOR . LPAREN asignacion argumentologico EOL VAR SUMA SUMA RPAREN LBRACE SALTO lineas SALTO RBRACE

    LPAREN          shift and go to state 50


state 25

    (12) sentencia -> echo SALTO .

    $end            reduce using rule 12 (sentencia -> echo SALTO .)


state 26

    (13) asignacion -> VAR ASIGNACION . valor EOL
    (89) declaracion_numeros -> VAR ASIGNACION . numero EOL
    (90) array -> VAR ASIGNACION . ARRAY LPAREN elementos RPAREN EOL
    (117) ingreso_datos -> VAR ASIGNACION . readline
    (139) expresionAritmetica -> VAR ASIGNACION . numero masTerminos EOL
    (140) expresionAritmetica -> VAR ASIGNACION . VAR masTerminos EOL
    (18) valor -> . ENTERO
    (19) valor -> . FLOTANTE
    (20) valor -> . BOOLEANO
    (21) valor -> . CADENA
    (22) valor -> . VAR
    (23) valor -> . VARIABLE_ARRAY
    (24) valor -> . operacion
    (25) valor -> . argumentologico
    (26) valor -> . array_index
    (75) numero -> . ENTERO
    (76) numero -> . FLOTANTE
    (116) readline -> . READLINE LPAREN CADENA RPAREN EOL
    (39) operacion -> . ENTERO
    (40) operacion -> . FLOTANTE
    (41) operacion -> . ENTERO operador operacion
    (42) operacion -> . FLOTANTE operador operacion
    (61) argumentologico -> . VAR operador_logico VAR
    (62) argumentologico -> . numero operador_logico numero
    (63) argumentologico -> . VAR operador_logico numero
    (64) argumentologico -> . VAR IGUAL BOOLEANO
    (65) argumentologico -> . VAR IGUAL CADENA
    (66) argumentologico -> . VAR DIFERENTE BOOLEANO
    (67) argumentologico -> . VAR DIFERENTE CADENA
    (68) argumentologico -> . numero operador_logico VAR
    (69) argumentologico -> . BOOLEANO IGUAL VAR
    (70) argumentologico -> . CADENA IGUAL VAR
    (71) argumentologico -> . CADENA IGUAL CADENA
    (72) argumentologico -> . CADENA DIFERENTE VAR
    (73) argumentologico -> . CADENA DIFERENTE CADENA
    (74) argumentologico -> . BOOLEANO
    (36) array_index -> . VAR multi_dimensiones

    ARRAY           shift and go to state 54
    VAR             shift and go to state 51
    ENTERO          shift and go to state 56
    FLOTANTE        shift and go to state 57
    BOOLEANO        shift and go to state 31
    CADENA          shift and go to state 32
    VARIABLE_ARRAY  shift and go to state 34
    READLINE        shift and go to state 20

    valor                          shift and go to state 52
    numero                         shift and go to state 53
    readline                       shift and go to state 55
    operacion                      shift and go to state 35
    argumentologico                shift and go to state 36
    array_index                    shift and go to state 37

state 27

    (14) echo -> ECHO valores . EOL
    (15) echo -> ECHO valores . EOL SALTO

    EOL             shift and go to state 58


state 28

    (16) valores -> valor .
    (17) valores -> valor . COMA valores

    EOL             reduce using rule 16 (valores -> valor .)
    COMA            shift and go to state 59


state 29

    (18) valor -> ENTERO .
    (39) operacion -> ENTERO .
    (41) operacion -> ENTERO . operador operacion
    (75) numero -> ENTERO .
    (84) operador -> . SUMA
    (85) operador -> . RESTA
    (86) operador -> . MULT
    (87) operador -> . DIV
    (88) operador -> . POT

  ! reduce/reduce conflict for COMA resolved using rule 18 (valor -> ENTERO .)
  ! reduce/reduce conflict for EOL resolved using rule 18 (valor -> ENTERO .)
    COMA            reduce using rule 18 (valor -> ENTERO .)
    EOL             reduce using rule 18 (valor -> ENTERO .)
    IGUAL           reduce using rule 75 (numero -> ENTERO .)
    DIFERENTE       reduce using rule 75 (numero -> ENTERO .)
    MENOR           reduce using rule 75 (numero -> ENTERO .)
    MAYOR           reduce using rule 75 (numero -> ENTERO .)
    MENOR_IGUAL     reduce using rule 75 (numero -> ENTERO .)
    MAYOR_IGUAL     reduce using rule 75 (numero -> ENTERO .)
    SUMA            shift and go to state 61
    RESTA           shift and go to state 62
    MULT            shift and go to state 63
    DIV             shift and go to state 64
    POT             shift and go to state 65

  ! COMA            [ reduce using rule 39 (operacion -> ENTERO .) ]
  ! EOL             [ reduce using rule 39 (operacion -> ENTERO .) ]

    operador                       shift and go to state 60

state 30

    (19) valor -> FLOTANTE .
    (40) operacion -> FLOTANTE .
    (42) operacion -> FLOTANTE . operador operacion
    (76) numero -> FLOTANTE .
    (84) operador -> . SUMA
    (85) operador -> . RESTA
    (86) operador -> . MULT
    (87) operador -> . DIV
    (88) operador -> . POT

  ! reduce/reduce conflict for COMA resolved using rule 19 (valor -> FLOTANTE .)
  ! reduce/reduce conflict for EOL resolved using rule 19 (valor -> FLOTANTE .)
    COMA            reduce using rule 19 (valor -> FLOTANTE .)
    EOL             reduce using rule 19 (valor -> FLOTANTE .)
    IGUAL           reduce using rule 76 (numero -> FLOTANTE .)
    DIFERENTE       reduce using rule 76 (numero -> FLOTANTE .)
    MENOR           reduce using rule 76 (numero -> FLOTANTE .)
    MAYOR           reduce using rule 76 (numero -> FLOTANTE .)
    MENOR_IGUAL     reduce using rule 76 (numero -> FLOTANTE .)
    MAYOR_IGUAL     reduce using rule 76 (numero -> FLOTANTE .)
    SUMA            shift and go to state 61
    RESTA           shift and go to state 62
    MULT            shift and go to state 63
    DIV             shift and go to state 64
    POT             shift and go to state 65

  ! COMA            [ reduce using rule 40 (operacion -> FLOTANTE .) ]
  ! EOL             [ reduce using rule 40 (operacion -> FLOTANTE .) ]

    operador                       shift and go to state 66

state 31

    (20) valor -> BOOLEANO .
    (69) argumentologico -> BOOLEANO . IGUAL VAR
    (74) argumentologico -> BOOLEANO .

  ! reduce/reduce conflict for COMA resolved using rule 20 (valor -> BOOLEANO .)
  ! reduce/reduce conflict for EOL resolved using rule 20 (valor -> BOOLEANO .)
    COMA            reduce using rule 20 (valor -> BOOLEANO .)
    EOL             reduce using rule 20 (valor -> BOOLEANO .)
    IGUAL           shift and go to state 67

  ! COMA            [ reduce using rule 74 (argumentologico -> BOOLEANO .) ]
  ! EOL             [ reduce using rule 74 (argumentologico -> BOOLEANO .) ]


state 32

    (21) valor -> CADENA .
    (70) argumentologico -> CADENA . IGUAL VAR
    (71) argumentologico -> CADENA . IGUAL CADENA
    (72) argumentologico -> CADENA . DIFERENTE VAR
    (73) argumentologico -> CADENA . DIFERENTE CADENA

    COMA            reduce using rule 21 (valor -> CADENA .)
    EOL             reduce using rule 21 (valor -> CADENA .)
    IGUAL           shift and go to state 68
    DIFERENTE       shift and go to state 69


state 33

    (22) valor -> VAR .
    (61) argumentologico -> VAR . operador_logico VAR
    (63) argumentologico -> VAR . operador_logico numero
    (64) argumentologico -> VAR . IGUAL BOOLEANO
    (65) argumentologico -> VAR . IGUAL CADENA
    (66) argumentologico -> VAR . DIFERENTE BOOLEANO
    (67) argumentologico -> VAR . DIFERENTE CADENA
    (36) array_index -> VAR . multi_dimensiones
    (77) operador_logico -> . IGUAL
    (78) operador_logico -> . DIFERENTE
    (79) operador_logico -> . MENOR
    (80) operador_logico -> . MAYOR
    (81) operador_logico -> . MENOR_IGUAL
    (82) operador_logico -> . MAYOR_IGUAL
    (37) multi_dimensiones -> . LBRACKET clave_dic RBRACKET
    (38) multi_dimensiones -> . LBRACKET clave_dic RBRACKET multi_dimensiones

    COMA            reduce using rule 22 (valor -> VAR .)
    EOL             reduce using rule 22 (valor -> VAR .)
    IGUAL           shift and go to state 71
    DIFERENTE       shift and go to state 72
    MENOR           shift and go to state 74
    MAYOR           shift and go to state 75
    MENOR_IGUAL     shift and go to state 76
    MAYOR_IGUAL     shift and go to state 77
    LBRACKET        shift and go to state 78

    operador_logico                shift and go to state 70
    multi_dimensiones              shift and go to state 73

state 34

    (23) valor -> VARIABLE_ARRAY .

    COMA            reduce using rule 23 (valor -> VARIABLE_ARRAY .)
    EOL             reduce using rule 23 (valor -> VARIABLE_ARRAY .)


state 35

    (24) valor -> operacion .

    COMA            reduce using rule 24 (valor -> operacion .)
    EOL             reduce using rule 24 (valor -> operacion .)


state 36

    (25) valor -> argumentologico .

    COMA            reduce using rule 25 (valor -> argumentologico .)
    EOL             reduce using rule 25 (valor -> argumentologico .)


state 37

    (26) valor -> array_index .

    COMA            reduce using rule 26 (valor -> array_index .)
    EOL             reduce using rule 26 (valor -> array_index .)


state 38

    (62) argumentologico -> numero . operador_logico numero
    (68) argumentologico -> numero . operador_logico VAR
    (77) operador_logico -> . IGUAL
    (78) operador_logico -> . DIFERENTE
    (79) operador_logico -> . MENOR
    (80) operador_logico -> . MAYOR
    (81) operador_logico -> . MENOR_IGUAL
    (82) operador_logico -> . MAYOR_IGUAL

    IGUAL           shift and go to state 80
    DIFERENTE       shift and go to state 81
    MENOR           shift and go to state 74
    MAYOR           shift and go to state 75
    MENOR_IGUAL     shift and go to state 76
    MAYOR_IGUAL     shift and go to state 77

    operador_logico                shift and go to state 79

state 39

    (48) if -> if else .
